--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                     <td><strong>Staging</strong></td>
                                     <td>https://staging.withkm.com</td>
                                     <td>QA, testing, UAT</td>
-                                    <td><span class="status-badge status-pending">🔜 NOT YET LIVE</span></td>
+                                    <td><span class="status-badge status-live">✅ LIVE</span></td>
                                 </tr>
                                 <tr>
                                     <td><strong>Production</strong></td>
